syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/resourcespb";
option java_multiple_files = true;
option java_package = "dev.multy.api.resources";
option java_outer_classname = "ResourcesProto";

import "api/proto/commonpb/common.proto";

package dev.multy.resources;

message CreateNetworkSecurityGroupRequest {
  NetworkSecurityGroupArgs resource = 1;
}

message ReadNetworkSecurityGroupRequest {
  string resource_id = 1;
}

message UpdateNetworkSecurityGroupRequest {
  string resource_id = 1;
  NetworkSecurityGroupArgs resource = 2;
}

message DeleteNetworkSecurityGroupRequest {
  string resource_id = 1;
}

message PortRange {
  int32 from = 1;
  int32 to = 2;
}

enum Direction {
  BOTH_DIRECTIONS = 0;
  INGRESS = 1;
  EGRESS = 2;

}

message NetworkSecurityRule {
  string protocol = 1;
  int64 priority = 2;
  PortRange port_range = 3;
  string cidr_block = 4;
  Direction direction = 5;

}


message NetworkSecurityGroupGcpOverride {
  string project = 1;
}

message NetworkSecurityGroupArgs {
  common.ResourceCommonArgs common_parameters = 1;
  string name = 2;
  string virtual_network_id = 3;
  repeated NetworkSecurityRule rules = 4;

  NetworkSecurityGroupGcpOverride gcp_override = 5;
}


message NetworkSecurityGroupAwsOutputs {
  string security_group_id = 1;
}

message NetworkSecurityGroupAzureOutputs {
  string network_security_group_id = 1;
}


message NetworkSecurityGroupGcpOutputs {
  repeated string compute_firewall_id = 1;
}

message NetworkSecurityGroupResource {
  common.CommonResourceParameters common_parameters = 1;
  string name = 2;
  string virtual_network_id = 3;
  repeated NetworkSecurityRule rules = 4;

  NetworkSecurityGroupGcpOverride gcp_override = 5;

  NetworkSecurityGroupAwsOutputs aws_outputs = 6;
  NetworkSecurityGroupAzureOutputs azure_outputs = 7;
  NetworkSecurityGroupGcpOutputs gcp_outputs = 8;
}
